# GeneralAIWithPyTorch

./: .gitignore  main.py  pyproject.toml
.github/workflows/: number_identification.yaml
CIFAR10_pretrained_v_original/: main.py
CIFAR10_pretrained_v_original/models/pretrained/: cifar_autoencoder.pt
NumberIdentification/: drawing_ui.py  main.py  model1.pth  model2.pth  run_model.py  simple_mlp.py  simple_resnet.py
NumberIdentification/helpers/: clean_up.py  model.py  model_size.py
PowerUsage/: main.py  models.py
PowerUsage/data/: household_power_test.csv  household_power_train.csv
PowerUsage/helpers/: model_helpers.py
PowerUsage/models/: gru.pth  lstm.pth  rnn.pth
